--- a/src/ByteDev.FileNamer.Ui/packages.config
+++ b/src/ByteDev.FileNamer.Ui/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ByteDev.Common" version="7.0.0" targetFramework="net471" />
-  <package id="ByteDev.Configuration" version="2.0.1" targetFramework="net471" />
-  <package id="ByteDev.Io" version="4.0.0" targetFramework="net471" />
+  <package id="ByteDev.Configuration" version="2.0.2" targetFramework="net48" />
+  <package id="ByteDev.Io" version="7.4.1" targetFramework="net48" />
+  <package id="ByteDev.Strings" version="11.1.0" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net471" />
   <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net471" />
   <package id="System.Security.Permissions" version="4.7.0" targetFramework="net471" />
