Remove Core string extension methods

--- a/src/ByteDev.FileNamer.Core/ByteDev.FileNamer.Core.csproj
+++ b/src/ByteDev.FileNamer.Core/ByteDev.FileNamer.Core.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ByteDev.Strings, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\ByteDev.Strings.11.1.0\lib\netstandard2.0\ByteDev.Strings.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -56,7 +59,9 @@
     <Compile Include="FileRenameCommands\ReplaceStringCommand.cs" />
     <Compile Include="FileRenameCommandList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringExtensions.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
